--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "maimous",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.14.0"
+    "express": "^4.14.0",
+    "moment": "^2.15.2"
   }
 }
