--- a/bkpoldv/package.json
+++ b/bkpoldv/package.json
@@ -1,17 +1,14 @@
 {
   "name": "timestamp",
   "version": "1.0.0",
-  "description": "",
+  "description": "a timestamp microservice",
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "maimous",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.15.2",
-    "ejs": "^2.5.2",
     "express": "^4.14.0",
     "moment": "^2.15.2"
   }
